<resources>
    <string name="app_name">App Lista Curso</string>
    <string name="primeiroNome">Primeiro Nome</string>
    <string name="sobreNome">Sobrenome</string>
    <string name="nomeCurso">Nome do Curso Desejado</string>
    <string name="telefoneContato">Telefone para Contato</string>
    <string name="limpar">Limpar</string>
    <string name="salvar">Salvar</string>
    <string name="finalizar">Finalizar</string>
    <string name="select_curs">Selecione o Curso</string>
</resources>